 * [Fix issue #36](https://bitbucket.org/splatteredbits/carbon/issue/36/get-powershellpath-returns-the-wrong-path): [Get-PowerShellpath](http://get-carbon.org/help/Get-PowershellPath.html) returns the wrong path when running x86 PowerShell on x64 computers.

# 0.2.7 (3 September 2012)

## Enhancements
 * New functions for working with the registry:
  * [Get-RegistryKeyValue](http://get-carbon.org/help/Get-RegistryKeyValue.html): Get a value from a registry key.
  * [Install-RegistryKey](http://get-carbon.org/help/Install-RegistryKey.html): Create a new registry key.
  * [Remove-RegistryKeyValue](http://get-carbon.org/help/Remove-RegistryKeyValue.html): Remove a value from a registry key.
  * [Set-RegistryKeyValue](http://get-carbon.org/help/Set-RegistryKeyValue.html): Set/create a value in a registry key.
  * [Test-RegistryKeyValue](http://get-carbon.org/help/Test-RegistryKeyValue.html): Test if a value exists in a registry key.
 * [Unprotect-AclAccessRules](http://get-carbon.org/help/Unprotect-AclAccessRules.html): Turns off inherited access rules on an item in the file system or registry.
 * Added a `Clear` parameter to the [Grant-Permissions](http://get-carbon.org/help/Grant-Permissions.html) function for clearing any non-inherited permissions on a file system/registry item.
 
# 0.2.6 (30 June 2012)

## Enhancements
 * Improved documentation for:
  * [Grant-ServiceControlPermission](http://get-carbon.org/help/Grant-ServiceControlPermission.html)
  * [Install-Service](http://get-carbon.org/help/Install-Service.html)
  * [Invoke-SubInAcl](http://get-carbon.org/help/Invoke-SubInAcl.html)
  * [Remove-Service](http://get-carbon.org/help/Remove-Service.html)
  * [Restart-RemoteService](http://get-carbon.org/help/Restart-RemoteService.html)
  * [Install-Share](http://get-carbon.org/help/Install-Share.html)
  * [Add-GroupMembers](http://get-carbon.org/help/Add-GroupMembers.html)
  * [Get-WmiLocalUserAccount](http://get-carbon.org/help/Get-WmiLocalUserAccount.html)